# scDiffEq

./: .gitignore  .readthedocs.yaml  CNAME  LICENSE  README.md  SUMMARY.md  main.py  pyproject.toml  requirements.txt  setup.py
.docs/EMT_simulation/: README.md
.github/workflows/: codecov.yml  docs.yml  pypi_release.yml
analysis/: README.md
datasets/: README.md
docs/: requirements.txt
docs/notebooks/: README.md  fixing.sdes.ipynb
docs/scripts/: download.SRA.PRJNA472237.sh
docs/source/: analyses.rst  api.rst  conf.py  dependencies.rst  examples.rst  index.rst  install.rst  larry.rst  quickstart.rst  reproducibility.rst  tutorials.rst
documentation/spiral_2d/: 2d_toy_simulations.ipynb
nbs/: LitDataModule_instructionally_useful.ipynb  README.md  pancreas_demo.ipynb  time_free_modeling.ipynb
notebooks/: 2d_toy_simulations.ipynb  EMT_Simulation.ipynb  README.md
notebooks/EMT_simulation/: EMT_timecourse_data.csv  reaching_epithelial.csv  reaching_hybrid.csv  reaching_mesenchymal.csv
notebooks/spiral_2d/: minimal_2d_spiral_learning_example.ipynb
results/: README.md
results/EMT.CROPseq/: README.md
results/LARRY/: README.md
scdiffeq/: README.md  __init__.py  __version__.py  _version.py
scdiffeq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scdiffeq/_backend_utilities/: __init__.py  _anndata_index_lookup.py  _configure_logging.py  _log_memory_usage.py
scdiffeq/_clonal/: _count_annotations.py  _get_single_clone_data.py  _summarize_clonal_fates.py
scdiffeq/_core/: __init__.py  _scdiffeq.py
tests/: __init__.py  pypi_release_smoke_test.py  test_io.py
(+874 files in other folders)
